fixed issue with card overflow

--- a/src/components/pd-card/pd-card.scss
+++ b/src/components/pd-card/pd-card.scss
@@ -14,5 +14,4 @@
 .pd-card-content-wrapper {
     transition: height 0.3s ease-in-out;
     height: auto;
-    overflow: hidden;
 }
